# crypto-lob

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  conanfile.txt  docker-compose.yml  exchange_protocols.md  run-clang-tidy-summary.sh  tsan.suppressions
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  code-quality.yml  docker-ci.yml
config/: asan.suppressions  config.toml
docs/: Crypto Market Data Provider_.md  Crypto_Market_Data_Provider_Arch_Guide.md  arch_guide.md  arch_guide_20250808.md  borrow_plan.md  exchange_protocols.md
docs/architecture/: memory_management.md
docs/archives/: arch_guide_lean.md
scripts/: analyze_memory_benchmarks.py  build.sh  run-clang-tidy.sh
src/: main.cpp
src/core/: book_side.hpp  cache.hpp  configuration.cpp  configuration.hpp  enums.hpp  exchange_enum.hpp  instrument.hpp  memory_pool.hpp  normalized_message.hpp  numa_memory_pool.hpp  order_map.hpp  platform.hpp  price.hpp  price_level.hpp  raw_message.hpp  spsc_ring.hpp  timestamp.hpp  types.cpp  types.hpp
src/examples/: configuration_example.cpp
src/exchange/: message_types.hpp
src/exchanges/: base_parser.hpp  binance_spot_connector.hpp  binance_spot_parser.hpp  exchange_connector.hpp  message_types.hpp  parser.hpp
src/exchanges/base/: message_types.hpp
src/exchanges/binance/: binance_connector_hft.hpp  binance_spot_connector.hpp  binance_spot_parser.hpp
src/networking/: raw_message_pool.hpp  websocket_client.hpp  websocket_client_hft.hpp
src/orderbook/: book_side.hpp  order_book.hpp  order_book_manager.hpp  order_book_synchronizer.hpp  price_level.hpp
src/parsing/: base_parser.hpp
tests/benchmarks/: BENCHMARK_RESULTS.md  CMakeLists.txt  README.md  batch_allocation_benchmark.cpp  memory_pool_comparison_benchmark.cpp  memory_pool_latency_benchmark.cpp  simple_latency_test.cpp  timestamp_benchmark.cpp
tests/unit/: test_base_parser.cpp  test_binance_spot_parser.cpp  test_book_side.cpp  test_configuration.cpp  test_instrument_id.cpp  test_memory_pool_batch.cpp  test_memory_pool_production.cpp  test_message_types.cpp  test_numa_memory_pool.cpp  test_order_book.cpp  test_order_book_manager.cpp  test_order_book_synchronizer.cpp  test_price.cpp  test_raw_message_pool.cpp  test_spsc_ring.cpp  test_timestamp.cpp
